# picar

./: Cargo.toml
python/: onnx_run.py  tester.py  trainer.py
src/: main.rs  motor.rs  profile.rs  servo.rs
