[package]
name = "picar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
csv = "1.2.2"
ctrlc = "3.4.0"
opencv = "0.84.4"
rppal = { version = "0.14.1", features = ["hal"] }
serde = { version = "1.0.183", features = ["derive"] }
